--- a/claimShooting.html
+++ b/claimShooting.html
@@ -132,7 +132,10 @@
     <!--=================== HEADER END ===================-->
 
     <!--=================== PAGE-TITLE ===================-->
-    <div class="page-title" style="background-image: url(assets/img/banner-seminar.jpg)">
+    <div
+      class="page-title"
+      style="background-image: url(assets/img/banner-seminar.jpg)"
+    >
       <div class="container">
         <div class="img-demo"></div>
       </div>
@@ -146,7 +149,8 @@
           <div class="col-12 col-md-6">
             <div class="overview-info">
               <h2 class="title-line-left text-black uppercase font-size-37">
-                Kỹ năng xử lý <br> phàn nàn Khách hàng
+                Kỹ năng xử lý <br />
+                phàn nàn Khách hàng
               </h2>
 
               <div class="overview-info-item">
@@ -155,22 +159,25 @@
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
                   <li>
-                    1. Thấu hiểu vai trò & nhiệm vụ của 1 Nhân viên Sales<br> &nbsp; &nbsp; / Chăm
-                    sóc Khách hàng chuyên nghiệp
+                    1. Thấu hiểu vai trò & nhiệm vụ của 1 Nhân viên Sales<br />
+                    &nbsp; &nbsp; / Chăm sóc Khách hàng chuyên nghiệp
                   </li>
                   <li>
-                    2. Nắm vững kiến thức & 5 cấp độ về chăm sóc<br> &nbsp; &nbsp;  Khách hàng theo
-                    tinh thần Omotenashi của Nhật Bản
+                    2. Nắm vững kiến thức & 5 cấp độ về chăm sóc<br />
+                    &nbsp; &nbsp; Khách hàng theo tinh thần Omotenashi của Nhật
+                    Bản
                   </li>
                   <li>
-                    3. Thấu hiểu tâm lý, mong đợi của Khách hàng khi họ<br> &nbsp; &nbsp;  phàn nàn
+                    3. Thấu hiểu tâm lý, mong đợi của Khách hàng khi họ<br />
+                    &nbsp; &nbsp; phàn nàn
                   </li>
                   <li>
-                    4. Vận dụng 7 bước xử lý phàn nàn của Khách hàng<br> &nbsp; &nbsp;  hiệu quả,
-                    nhằm giữ chân Khách hàng
+                    4. Vận dụng 7 bước xử lý phàn nàn của Khách hàng<br />
+                    &nbsp; &nbsp; hiệu quả, nhằm giữ chân Khách hàng
                   </li>
                   <li>
-                    5. Áp dụng các kỹ thuật khi xử lý phàn nàn của<br> &nbsp; &nbsp;  Khách hàng
+                    5. Áp dụng các kỹ thuật khi xử lý phàn nàn của<br />
+                    &nbsp; &nbsp; Khách hàng
                   </li>
                 </ol>
               </div>
@@ -180,7 +187,8 @@
                 <ol>
                   <li>1. Đội ngũ Sales, Chăm sóc Khách hàng, dịch vụ</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi Kỹ năng<br> &nbsp; &nbsp; xử lí phàn nàn
+                    2. Anh/Chị quan tâm, mong muốn học hỏi Kỹ năng<br />
+                    &nbsp; &nbsp; xử lí phàn nàn
                   </li>
                 </ol>
               </div>
@@ -238,9 +246,10 @@
                 <h5>Lưu ý:</h5>
                 <p>
                   1. Nội dung khoá học có thể điều chỉnh một ít, phù hợp với
-                  <br> &nbsp; &nbsp;đối tượng tham dự.
+                  <br />
+                  &nbsp; &nbsp;đối tượng tham dự.
                 </p>
-                <p> 2. Hình ảnh mang tính chất minh họa, nguồn từ Internet. </p>
+                <p>2. Hình ảnh mang tính chất minh họa, nguồn từ Internet.</p>
               </div>
               <div class="history-cert">
                 <div class="history-cert-img">
@@ -310,7 +319,7 @@
                   <li>4. Đưa ra đối sách & tiến hành PDCA nhanh chóng</li>
                   <li>5. Thể hiện lòng biết ơn</li>
                   <li>6. Hou-ren-sou với cấp trên / phòng ban</li>
-                  
+
                   <li>7. Luôn quan tâm, kết nối với Khách hàng</li>
                 </ol>
               </div>
@@ -342,50 +351,56 @@
     <section class="s-testimonials about-testimonials-slider">
       <div class="container">
         <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-        <!-- <p class="slogan">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore.
-		  </p> -->
+
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
-                việc hiện tại
+                Giúp có thêm kiến thức mới về xử lý phàn nàn của khách hàng,
+                kiềm chế bản thân, lắng nghe ý kiến của khách hàng.
               </div>
-              <!-- <h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
-                tôi
+                Bài giảng thú vị, kiến thức mới có thể áp dụng được tốt
               </div>
-              <!-- <h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
+                Có nhiều việc trước giờ e đã thực hiện kiểu Omotenashi rồi mà e
+                chưa nhận ra. Đến nay e mới hiểu rõ hơn về Omotenashi ạ. E cũng
+                học được nhiều điều để mà cải thiện bản thân mình hơn trong công
+                việc. E cảm ơn chị rất nhiều ạ
               </div>
-              <!-- <h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div> -->
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Rất bổ ích, học tập được những kinh nghiệm, phương pháp xử lý
+                tình huống với khách hàng. Hiểu được vấn đề đang mắc phải và đưa
+                ra những giải pháp để khắc phục.
+              </div>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Khoá học hôm này đã giúp tụi em học được nhiều điều rất bổ ích
+                để biết cách thay đổi mình và chăm sóc khách hàng tốt hơn
+              </div>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Học được cách chăm sóc khách hàng tận tâm, chu đáo và phục vụ
+                khách hàng một cách tốt nhất.
+              </div>
             </div>
           </div>
         </div>
@@ -517,7 +532,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
