--- a/communicationSkill.html
+++ b/communicationSkill.html
@@ -373,8 +373,7 @@
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span> -->
               <div class="testimon-content">
-                Được bổ sung kiến thức và kỹ năng như: kỹ năng giao tiếp, lắng nghe, kỹ năng check-mail và trả lời email và tác phong làm việc. 
-              </div>
+                Trước đây, khi giao tiếp, tôi thường không quan tâm mong đợi của đối phương, cũng như thấu hiểu tính cảnh, tình huống, nên dẫn đến giao tiếp chưa đúng trọng tâm, còn lòng vòng, chưa hiệu quả. Sau khoá học, tôi thấy rất bổ ích, sẽ áp dụng ngay và luôn vào trong công việc hàng ngày.              </div>
               <!-- <h4 class="name">Louisa Russell</h4>
               <div class="prof">Regular Client</div> -->
             </div>
@@ -386,8 +385,7 @@
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span> -->
               <div class="testimon-content">
-                Học hỏi được nhiều điều hay, mới mẻ. Lớp học vui, thân thiện. Giảng viên dạy tốt, dễ hiểu
-              </div>
+                Nhiều công thức hữu ích, dễ nhớ giúp tôi hệ thống hoá dễ dàng, và thấy áp dụng không khó.              </div>
               <!-- <h4 class="name">Samson Peters</h4>
               <div class="prof">Regular Client</div> -->
             </div>
@@ -399,8 +397,7 @@
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
               ></span> -->
               <div class="testimon-content">
-                Đưa ra những tình huống thực tế để đàm phán và giải pháp xử lý. 
-              </div>
+                Cô giáo dạy dễ hiểu và chị hỗ trợ nhiệt tình. Nội dung chương trình dễ hiểu và có thể áp dụng vào thực tế.              </div>
               <!-- <h4 class="name">Marry James</h4>
               <div class="prof">Regular Client</div> -->
             </div>
@@ -534,7 +531,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
