--- a/customerServiceSkill.html
+++ b/customerServiceSkill.html
@@ -493,7 +493,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-				© 2021 Bản quyền thuộc về 
+				© Bản quyền thuộc về 
                 <a target="_blank" href="https://www.omotenashi.com.vn/">OMOTENASHI </a>
               </div>
             </div>
