--- a/delegationSkill.html
+++ b/delegationSkill.html
@@ -137,7 +137,7 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <div class='img-demo' ></div>
+        <div class="img-demo"></div>
         <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
@@ -159,9 +159,10 @@
               <!-- <h2 class="title-line-left">
                 NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
               </h2> -->
-              <h2 class="title-line-left text-black uppercase font-size-38px">Kỹ năng phân công phân nhiệm hiệu quả</h2>
+              <h2 class="title-line-left text-black uppercase font-size-38px">
+                Kỹ năng phân công phân nhiệm hiệu quả
+              </h2>
 
-              
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -171,10 +172,9 @@
                   <li>2. Thấu hiểu tầm quan trọng của phân công phân nhiệm</li>
                   <li>3. Nắm vững 7 bước giao việc hiện quả</li>
                   <li>
-                    4. Giúp Nhân viên hoàn thành công việc được giao,<br> &nbsp; &nbsp; tăng thêm
-                    động lực làm việc
+                    4. Giúp Nhân viên hoàn thành công việc được giao,<br />
+                    &nbsp; &nbsp; tăng thêm động lực làm việc
                   </li>
-                  
                 </ol>
               </div>
 
@@ -183,7 +183,8 @@
                 <ol>
                   <li>1. Cấp Quản lý, Leader, Giám sát</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi về<br> &nbsp; &nbsp; kỹ năng phân công phân nhiệm hiệu quả
+                    2. Anh/Chị quan tâm, mong muốn học hỏi về<br />
+                    &nbsp; &nbsp; kỹ năng phân công phân nhiệm hiệu quả
                   </li>
                 </ol>
               </div>
@@ -246,9 +247,10 @@
                 <h5>Lưu ý:</h5>
                 <p>
                   1. Nội dung khoá học có thể điều chỉnh một ít, phù hợp với
-                  <br> &nbsp; &nbsp;đối tượng tham dự.
+                  <br />
+                  &nbsp; &nbsp;đối tượng tham dự.
                 </p>
-                <p> 2. Hình ảnh mang tính chất minh họa, nguồn từ Internet. </p>
+                <p>2. Hình ảnh mang tính chất minh họa, nguồn từ Internet.</p>
               </div>
               <div class="history-cert">
                 <div class="history-cert-img">
@@ -274,9 +276,9 @@
             <div class="history-info-cover">
               <div class="history-info">
                 <h4 class="title text-blue uppercase">
-                  <span class="text-blue uppercase">Phần 1: </span>Chân dung của nhà quản
-                  lý chuyên nghiệp, giúp cấp dưới hoàn thành công việc được giao
-                  & phát triển
+                  <span class="text-blue uppercase">Phần 1: </span>Chân dung của
+                  nhà quản lý chuyên nghiệp, giúp cấp dưới hoàn thành công việc
+                  được giao & phát triển
                 </h4>
                 <ol>
                   <li>1. Hai nhiệm vụ chính</li>
@@ -286,9 +288,9 @@
               </div>
               <div class="history-info">
                 <h4 class="title text-blue uppercase">
-                  <span class="text-blue uppercase">Phần 2:</span> Tầm quan trọng của
-                  phân công phân nhiệm, giúp cấp dưới hoàn thành công việc được
-                  giao
+                  <span class="text-blue uppercase">Phần 2:</span> Tầm quan
+                  trọng của phân công phân nhiệm, giúp cấp dưới hoàn thành công
+                  việc được giao
                 </h4>
                 <ol>
                   <li>1. Lợi ích và tầm quan trọng</li>
@@ -297,14 +299,16 @@
               </div>
               <div class="history-info">
                 <h4 class="title text-blue uppercase">
-                  <span class="text-blue uppercase">Phần 3: </span>Để phân công phân
-                  nhiệm hiệu quả, giúp cấp dưới hoàn thành công việc được giao &
-                  phát triển
+                  <span class="text-blue uppercase">Phần 3: </span>Để phân công
+                  phân nhiệm hiệu quả, giúp cấp dưới hoàn thành công việc được
+                  giao & phát triển
                 </h4>
                 <ol>
                   <li>
-                   <span class="text-bold"> 1. Truyền đạt mục tiêu Công ty, bộ phận theo phương thức
-                    A.B.C.D</span>
+                    <span class="text-bold">
+                      1. Truyền đạt mục tiêu Công ty, bộ phận theo phương thức
+                      A.B.C.D</span
+                    >
                   </li>
                   <li>
                     <span class="text-bold">2. Thấu hiểu Nhân viên</span>
@@ -323,20 +327,25 @@
                         <ol>
                           <li>&nbsp;&nbsp; - PDCA</li>
                           <li>
-                            &nbsp;&nbsp; - Kết hợp với kế hoạch giao việc theo biểu đồ GANTT
+                            &nbsp;&nbsp; - Kết hợp với kế hoạch giao việc theo
+                            biểu đồ GANTT
                           </li>
                         </ol>
                       </li>
                       <li>
-                        &nbsp; B4: Giao việc, phải đi kèm với Đào tạo & huấn luyện
+                        &nbsp; B4: Giao việc, phải đi kèm với Đào tạo & huấn
+                        luyện
                         <ol>
                           <li>&nbsp;&nbsp; - Phân biện Đào tạo & huấn luyện</li>
-                          <li>&nbsp;&nbsp; - 3 phương pháp đào tạo & huấn luyện cơ bản</li>
+                          <li>
+                            &nbsp;&nbsp; - 3 phương pháp đào tạo & huấn luyện cơ
+                            bản
+                          </li>
                         </ol>
                       </li>
                       <li>
-                        &nbsp; B5: Giao việc, phải đi kèm giám sát, kiểm tra, hỗ trợ
-                        kịp thời
+                        &nbsp; B5: Giao việc, phải đi kèm giám sát, kiểm tra, hỗ
+                        trợ kịp thời
                       </li>
                       <li>&nbsp; B6: Tiếp nhận kết quả, đánh giá</li>
                       <li>&nbsp; B7: Khen ngợi, tạo động lực cho NV</li>
@@ -346,8 +355,8 @@
               </div>
               <div class="history-info">
                 <h4 class="title text-blue uppercase">
-                  <span class="text-blue uppercase">Phần 4: </span>Những điều cần tránh
-                  khi giao việc cho Nhân viên cấp dưới
+                  <span class="text-blue uppercase">Phần 4: </span>Những điều
+                  cần tránh khi giao việc cho Nhân viên cấp dưới
                 </h4>
               </div>
             </div>
@@ -361,50 +370,48 @@
     <section class="s-testimonials about-testimonials-slider">
       <div class="container">
         <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-        <!-- <p class="slogan">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore.
-		  </p> -->
+
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <!-- <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span> -->
               <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
-                việc hiện tại
+                Tôi đã hiểu, giao việc phải đi kèm với giám sát, đồng thời phải
+                đào tạo - huấn luyện để nâng cao năng lực & động lực cho Nhân
+                viên.
               </div>
-              <!-- <h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <!-- <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span> -->
               <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
-                tôi
+                Giúp nâng cao kỹ năng của quản lý để đội ngũ phát triển. Những
+                điều nên và không nên làm của người quản lý khi giao việc.
               </div>
-              <!-- <h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <!-- <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span> -->
               <div class="testimon-content">
-                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
+                Buổi học rất thú vị, thông qua những trò chơi có thể áp dụng
+                công việc, nâng cao kỹ năng quản lý con người và công việc, giao
+                đúng người - đúng việc, giúp cấp dưới hoàn thành công việc và
+                ngày càng phát triển hơn trong công việc.
               </div>
-              <!-- <h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div> -->
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Giúp ích cho công việc, tự tin trong công việc quản lí hiện tại
+              </div>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Ấn tượng về khả năng truyền lửa và cách truyền đạt rất nhiệt
+                tình của diễn giả
+              </div>
             </div>
           </div>
         </div>
@@ -536,7 +543,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
