--- a/holdingMeeting.html
+++ b/holdingMeeting.html
@@ -132,7 +132,10 @@
     <!--=================== HEADER END ===================-->
 
     <!--=================== PAGE-TITLE ===================-->
-    <div class="page-title" style="background-image: url(assets/img/banner-seminar.jpg)">
+    <div
+      class="page-title"
+      style="background-image: url(assets/img/banner-seminar.jpg)"
+    >
       <div class="container">
         <div class="img-demo"></div>
       </div>
@@ -169,13 +172,13 @@
                     họp.
                   </li>
                   <li>
-                    4. Có thể tổ chức cuộc họp hiệu quả, đạt được mục đích<br> &nbsp; &nbsp; mà
-                     không lãng phí thời gian
+                    4. Có thể tổ chức cuộc họp hiệu quả, đạt được mục đích<br />
+                    &nbsp; &nbsp; mà không lãng phí thời gian
                   </li>
                   <li>
                     5. Biết cách tạo ra không khí, động lực và khuyến khích<br />
-                    &nbsp; &nbsp;  được
-                    các thành viên tích cực tham gia cuộc họp.
+                    &nbsp; &nbsp; được các thành viên tích cực tham gia cuộc
+                    họp.
                   </li>
                   <li>
                     6. Biết triển khai công việc sau khi kết thúc cuộc họp.
@@ -251,9 +254,10 @@
                 <h5>Lưu ý:</h5>
                 <p>
                   1. Nội dung khoá học có thể điều chỉnh một ít, phù hợp với
-                  <br> &nbsp; &nbsp;đối tượng tham dự.
+                  <br />
+                  &nbsp; &nbsp;đối tượng tham dự.
                 </p>
-                <p> 2. Hình ảnh mang tính chất minh họa, nguồn từ Internet. </p>
+                <p>2. Hình ảnh mang tính chất minh họa, nguồn từ Internet.</p>
               </div>
               <div class="history-cert">
                 <div class="history-cert-img">
@@ -329,50 +333,27 @@
     <section class="s-testimonials about-testimonials-slider">
       <div class="container">
         <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-        <!-- <p class="slogan">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore.
-		  </p> -->
+
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
-                việc hiện tại
+                Tôi thấu hiểu tầm quan trọng cũng như chi phí một cuộc họp tiêu
+                tốn. Vì vậy, khi họp tôi sẽ áp dụng 04-Khi triệt để, để tổ chức
+                cuộc họp hiệu quả.
               </div>
-              <!-- <h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
-                tôi
+                Trước giờ khi họp, tôi hay không chuẩn bị gì, cứ thế vào họp. Vì
+                vậy, khi họp, chúng tôi nói lan man, không tập trung vào chủ đề
+                chính, toàn lố giờ họp. Họp xong, chúng tôi cũng không có biên
+                bản cuộc họp, không triển khai các kế hoạch sau họp, dẫn đến
+                cuộc họp trở nên vô bổ. Qua khóa học, tôi đã nắm vững kiến thức
+                - kỹ năng và sẽ dần khắc phục những điểm này.
               </div>
-              <!-- <h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
-              </div>
-              <!-- <h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
         </div>
@@ -504,7 +485,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
