--- a/middleManagamentSkill.html
+++ b/middleManagamentSkill.html
@@ -321,7 +321,7 @@
                       <li>4. Thấu hiểu năng lực</li>
                     </ol>
                   </li>
-                  <br>
+                  <br />
                   <li>
                     <span class="text-bold"
                       >III. Lập kế hoạch, giao việc & giám sát
@@ -332,7 +332,7 @@
                       <li>3. Một số LƯU Ý khi giao việc</li>
                     </ol>
                   </li>
-                  <br>
+                  <br />
                   <li>
                     <span class="text-bold"
                       >IV. Đào tạo & huấn luyện Nhân viên
@@ -344,7 +344,7 @@
                       <li>4. Lựa chọn phương pháp huấn luyện phù hợp</li>
                     </ol>
                   </li>
-                  <br>
+                  <br />
                   <li>
                     <span class="text-bold"
                       >V. Giao tiếp thấu cảm, tạo động lực Nhân viên
@@ -372,50 +372,45 @@
     <section class="s-testimonials about-testimonials-slider">
       <div class="container">
         <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-        <!-- <p class="slogan">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore.
-		  </p> -->
+
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <!-- <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span> -->
               <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
-                việc hiện tại
+                Buổi học rất thú vị, thông qua những trò chơi có thể áp dụng
+                công việc, nâng cao kỹ năng quản lý con người và kỹ năng hoàn
+                thiện bản thân
               </div>
-              <!-- <h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <!-- <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span> -->
               <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
-                tôi
+                Chương trình học rất hữu ích, giúp nâng cao kỹ năng và kiến thức
+                cho đội ngũ quản lý. Đồng thời qua khóa học giúp hiểu rõ thêm về
+                năng lực và khả năng quản lý, và đặc biệt là kỹ năng thấu hiểu
+                và chia sẻ để phân chia công việc cho phù hợp với năng lực của
+                từng nhân viên
               </div>
-              <!-- <h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div> -->
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <!-- <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span> -->
               <div class="testimon-content">
-                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
+                Cảm ơn cô giáo đã thiết kế nội dung học rất bổ ích, học được rất
+                nhiều kiến thức mới trong kỹ năng quản lý con người, giao việc
+                và thấu hiểu nhân viên, đồng nghiệp và cấp trên; cải thiện giao
+                tiếp
               </div>
-              <!-- <h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div> -->
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Hay. Khơi gợi tiềm năng giúp học viên tự tin hơn trong công
+                việc. Áp dụng tốt trong công việc thông qua các mô hình. Nhiều
+                bài tập nhóm, phân tích, giúp tự tin hơn.
+              </div>
             </div>
           </div>
         </div>
@@ -547,7 +542,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
