--- a/problemSolvingCommunication.html
+++ b/problemSolvingCommunication.html
@@ -331,44 +331,44 @@
     <!--================= OUR-HISTORY END =================-->
 
     <!--================= S-TESTIMONIALS =================-->
-    <!-- <section class="s-testimonials about-testimonials-slider">
+    <section class="s-testimonials about-testimonials-slider">
       <div class="container">
         <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
         
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Nâng cao kiến thức chuyên môn & nghiệp vụ trong công việc
-              </div>
+                Khoá học rất hữu ích giúp nâng cao kỹ năng giải quyết vấn đề, áp dụng vào công việc thực tiễn.              </div>
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Giúp có cách hiểu hơn về lập kế hoạch cặn kẽ trong công việc.
-              </div>
+                Khóa học cho em hiểu biết thêm về công cụ cũng như cách tư duy làm việc xuyên xuất mạch lạc rõ ràng hơn, giúp em giải quyết vấn đề hiệu quả hơn              </div>
             </div>
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
               <div class="testimon-content">
-                Giúp nâng cao được kỹ năng Hourensou, team work
-              </div>
+                Bổ ích, giúp học thêm các kỹ năng mới trong giải quyết vấn đề              </div>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Khóa học rất hứng thú, sôi động, giáo viên có phương pháp để mọi người tương tác với nhau, nội dung súc tích dễ hiểu, thấy giải quyết vấn đề không còn khó nữa.              </div>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <div class="testimon-content">
+                Giáo viên siêu dễ thương, kiến thức rất hữu dụng              </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
@@ -495,7 +495,7 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
