--- a/followership.html
+++ b/followership.html
@@ -494,7 +494,7 @@ Chương trình giúp nâng cao kỹ năng, rất vui nhộn, không cảm thấ
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-                © 2021 Bản quyền thuộc về
+                © Bản quyền thuộc về
                 <a target="_blank" href="https://www.omotenashi.com.vn/"
                   >OMOTENASHI
                 </a>
